--- a/templates/car/fuel_list.html
+++ b/templates/car/fuel_list.html
@@ -14,77 +14,55 @@
     {% block content %}
     
     <div class="card">
-        <h5 class="card-header">CREATE CAR </h5>
+        <h5 class="card-header">ENTER FUEL DETAILS</h5>
          <h5 class="card-header">
-          <a href="{% url 'create_car' %}" class="btn btn-primary">Create</a>
+          <a href="{% url 'create_fuel' %}" class="btn btn-primary">Create</a>
         </h5> 
         <div class="table-responsive text-nowrap">
           <table class="table">
             <thead>
               <tr>
                 
-                <th>CARS</th>
+                <th>ALL FUEL DETAILS</th>
               
               </tr>
             </thead>
             <tbody class="table-border-bottom-0">
-              {% for i in car_list %}
+              {% for i in fuel_list %}
               <tr>
                 <td>
-                  <h6> name</h6>  
+                  <h6> fueltype</h6>  
                   <i class="fab fa-angular fa-lg text-danger me-3"></i>
-                  <strong>{{i.name}}</strong>
+                  <strong>{{i.fueltype}}</strong>
                 </td>
 
                 <td>
-                    <h6> price</h6>
+                    <h6> tank capicity</h6>
                     <i class="fab fa-angular fa-lg text-danger me-3"></i>
-                    <strong>{{i.price}}</strong>
+                    <strong>{{i.tankcapicity}}</strong>
                   </td>
 
                 <td>
-                    <h6>exterior</h6>
+                    <h6>top speed</h6>
                     <i class="fab fa-angular fa-lg text-danger me-3"></i>
-                    <strong>{{i.exterior}}</strong>
+                    <strong>{{i.topspeed}}</strong>
                   </td>
                 <td>
-                    <h6> fuel</h6>
+                    <h6> mileage</h6>
                     <i class="fab fa-angular fa-lg text-danger me-3"></i>
-                    <strong>{{i.fuel}}</strong>
+                    <strong>{{i.mileage}}</strong>
                   </td>
 
-                  <td>
-                    <h6> brand</h6>
-                    <i class="fab fa-angular fa-lg text-danger me-3"></i>
-                    <strong>{{i.brand}}</strong>
-                  </td>
-
-                  <td>
-                    <h6> car varient</h6>
-                    <i class="fab fa-angular fa-lg text-danger me-3"></i>
-                    <strong>{{i.carvarient}}</strong>
-                  </td>
-
-                  <td>
-                    <h6> cartypetype</h6>
-                    <i class="fab fa-angular fa-lg text-danger me-3"></i>
-                    <strong>{{i.cartype}}</strong>
-                  </td>
-
-                  <td>
-                    <h6> comfort</h6>
-                    <i class="fab fa-angular fa-lg text-danger me-3"></i>
-                    <strong>{{i.comfort}}</strong>
-                  </td>
+                  
                 
                 <!-- <td><span class="badge bg-label-primary me-1">Active</span></td> -->
                 <td>
                   
                   <div class="dropdown">
-                      <a class="dropdown-item" href="{% url 'update_car' i.id %}"
+                      <a class="dropdown-item" href="{% url 'update_fuel' i.id %}"
                         ><i class="bx bx-edit-alt me-1"></i> update</a
                       >
-                      <a class="dropdown-item" href="{% url 'delete_car' i.id %}"
+                      <a class="dropdown-item" href="{% url 'delete_fuel' i.id %}"
                         ><i class="bx bx-trash me-1"></i> Delete</a
                       >
                       
