--- a/templates/user/home.html
+++ b/templates/user/home.html
@@ -84,11 +84,11 @@
 
         <div class="video-overlay header-text">
             <div class="caption">
-                <h6>Lorem ipsum dolor sit amet</h6>
+                <h6>Confused? Easy way to compare cars</h6>
                 <h2>Best <em>car Compare</em> in town!</h2>
-                <div class="main-button">
+                <!-- <div class="main-button">
                     <a href="contact.html">Contact Us</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
