--- a/templates/car/carcreate.html
+++ b/templates/car/carcreate.html
@@ -28,7 +28,7 @@
             <small class="text-muted float-end"></small>
           </div>
           <div class="card-body">
-            <form method="POST">
+            <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
               <div class="mb-3">
                 <label class="form-label" for="basic-icon-default-fullname"
